--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mysql2": "^3.15.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "chai": "^6.2.0",
+    "mocha": "^11.7.4",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
