--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "multer": "^2.0.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "chai": "^6.2.0",
