--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.15.3",
+    "pdfkit": "^0.17.2",
+    "pdfkit-table": "^0.1.99",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
